# Final-Project

./: .gitignore  README.md
data/: CMakeLists.txt
data/image/圖片編輯/: apple.xcf  game_menu.xcf  game_menu_exit.xcf  game_menu_guide.xcf  game_menu_level.xcf  game_menu_level_exit.xcf  game_menu_level_in.xcf  game_menu_level_in1.xcf  game_menu_level_in2.xcf  game_menu_level_in3.xcf  game_menu_level_in4.xcf  game_menu_music.xcf  guide_menu.xcf  menu.xcf  moon.xcf  snakeBody_turn.xcf  刺.xcf  地板一面.xcf  地板二面.xcf  地板四面.xcf  地板無面.xcf  多背景.xcf  按鈕.xcf  石頭.xcf  終點.xcf  背景中.xcf  背景霧.xcf  蘋果.xcf  蛇尾.xcf  蛇尾死.xcf  蛇身彎.xcf  蛇身彎死.xcf  蛇身直.xcf  蛇身直死.xcf  蛇頭.xcf  蛇頭死.xcf  輪鋸.xcf
data/image/圖片編輯/menu/: game_menu_exit.xcf  game_menu_guide.xcf  game_menu_level.xcf  game_menu_music.xcf  guide_menu.xcf  level_exit.xcf  level_in.xcf  level_in1.xcf  level_in2.xcf  level_in3.xcf  level_in4.xcf  menu.xcf
data/level/: L1  L2  L3  L4
example/: Arcane.h  Attack.cpp  GameWindow.cpp  Level.cpp  Main.cpp  Menu.cpp  Monster.cpp  Poison.h
include/: Arcane.h  Archer.h  Body.h  Button.h  Canon.h  Draw.h  GameWindow.h  Interface.h  Level.h  Map.h  Menu.h  Object.h  Poison.h  Snake.h  Stone.h  Storm.h  global.h
src/: Body.cpp  Button.cpp  CMakeLists.txt  GameWindow.cpp  Interface.cpp  Level.cpp  LevelDataBuild.py  Main.cpp  MatrixBuild.py  Menu.cpp  Monster.cpp  Object.cpp  Slider.cpp  Snake.cpp  Stone.cpp  Tower.cpp  global.cpp  main.cpp
